728
Well, it doesn't seem to be a problem of parsing...
{code}
; scala
Welcome to Scala version 2.7.1.final (Java HotSpot(TM) Client VM, Java 1.6.0_06).
Type in expressions to have them evaluated.
Type :help for more information.

scala> import java.awt.Color
import java.awt.Color

scala> val a = Color.RED
a: java.awt.Color = java.awt.Color[r=255,g=0,b=0]

scala> val c = Color.class
<console>:1: error: identifier expected but 'class' found.
       val c = Color.class
                     ^

scala> val c = Color.`class`
<console>:5: error: value class is not a member of object java.awt.Color
       val c = Color.`class`
                     ^
{code}


mark

